--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "alena makarova",
   "license": "ISC",
   "dependencies": {
+    "npm": "^6.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
