--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --config ./config/jest.config.js --watchAll --coverage=false",
-    "start": "node_modules/.bin/webpack —config config/webpack.config.js —mode=production",
+    "start": "node_modules/.bin/webpack --config config/webpack.config.js --mode=production",
     "dev": "node_modules/.bin/webpack --config config/webpack.config.js --mode=development --watch",
     "hmr": "./node_modules/.bin/webpack-dev-server --config ./config/webpack.config.js --open",
-    "lint": "node node_modules/eslint/bin/eslint.js src//.js"
+    "lint": "node node_modules/eslint/bin/eslint.js src/**/**.js"
   },
   "keywords": [
     "todo",
@@ -18,8 +18,8 @@
   "author": "Andrey Makarov",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-ionicons": "^2.1.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -55,13 +55,13 @@
     "jest": "^22.4.4",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "react-test-renderer": "^16.3.2",
+    "react-test-renderer": "^16.4.0",
     "sass-loader": "^6.0.7",
     "sinon": "^4.5.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
   }
 }
